--- a/index.html
+++ b/index.html
@@ -3,14 +3,14 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Rain Matrix - DarkTron</title>
+  <title>Mr.exe</title>
   <link rel="stylesheet" href="styles.css">
 </head>
 <body>
   <canvas id="matrix"></canvas>
   <div class="content">
-    <h1>Welcome to the Matrix</h1>
-    <p>Explore the DarkTron vibes with glowing green code.</p>
+    <h1>Hack Solustion</h1>
+    <p>Pengen Berak Berak aja boy</p>
   </div>
   <script src="script.js"></script>
 </body>
