--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   <!-- Taskbar seperti Windows 7 -->
   <div class="taskbar">
     <div class="start">
-      <img src="https://upload.wikimedia.org/wikipedia/commons/0/0e/Windows_logo_2021.svg" alt="Windows Logo" class="logo">
+      <img src="https://logodix.com/logo/653608.png" alt="Windows Logo" class="logo">
     </div>
     <div class="taskbar-content">
       <div class="notifikasi" id="notifikasi">
