--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Matrix Web - DarkTron</title>
+  <title>Hack Solustion</title>
   <link rel="stylesheet" href="styles.css">
 </head>
 <body>
@@ -25,8 +25,8 @@
   </div>
 
   <div class="content">
-    <h1>Welcome to the Matrix</h1>
-    <p>Explore the DarkTron vibes with glowing green code.</p>
+    <h1>Mr.exe</h1>
+    <p>Pengen Berak Aja Kalo Udah Minta Tolong Saat Dibutuhkan</p>
   </div>
 
   <script src="script.js"></script>
