--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Hack Solustion</title>
+  <title>Matrix Web - DarkTron</title>
   <link rel="stylesheet" href="styles.css">
 </head>
 <body>
@@ -13,7 +13,7 @@
   <!-- Taskbar seperti Windows 7 -->
   <div class="taskbar">
     <div class="start">
-      <img src="https://logodix.com/logo/653608.png" alt="Windows Logo" class="logo">
+      <img src="https://upload.wikimedia.org/wikipedia/commons/0/0e/Windows_logo_2021.svg" alt="Windows Logo" class="logo">
     </div>
     <div class="taskbar-content">
       <div class="notifikasi" id="notifikasi">
@@ -25,8 +25,8 @@
   </div>
 
   <div class="content">
-    <h1>Mr.exe</h1>
-    <p>Pengen Berak Aja Kalo Udah Minta Tolong Saat Dibutuhkan</p>
+    <h1>Welcome to the Matrix</h1>
+    <p>Explore the DarkTron vibes with glowing green code.</p>
   </div>
 
   <script src="script.js"></script>
