--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Hack Solustion</title>
+  <title>Matrix Web - DarkTron</title>
   <link rel="stylesheet" href="styles.css">
 </head>
 <body>
@@ -12,8 +12,15 @@
 
   <!-- Taskbar seperti Windows 7 -->
   <div class="taskbar">
-    <div class="start">
-      <img src="https://logodix.com/logo/526951.png" alt="Windows Logo" class="logo">
+    <div class="start" id="startMenu">
+      <img src="https://upload.wikimedia.org/wikipedia/commons/0/0e/Windows_logo_2021.svg" alt="Windows Logo" class="logo" id="logo">
+      <div id="startMenuDropdown" class="start-menu">
+        <ul>
+          <li>Home</li>
+          <li>About</li>
+          <li>Contact</li>
+        </ul>
+      </div>
     </div>
     <div class="taskbar-content">
       <div class="notifikasi" id="notifikasi">
@@ -25,8 +32,8 @@
   </div>
 
   <div class="content">
-    <h1>Mr.exe</h1>
-    <p>Pengen Berak Lihat Orang Yang Datang Hanya Butuh Aja</p>
+    <h1>Welcome to the Matrix</h1>
+    <p>Explore the DarkTron vibes with glowing green code.</p>
   </div>
 
   <script src="script.js"></script>
