--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Hack Solustion</title>
+  <title>Matrix Web - DarkTron</title>
   <link rel="stylesheet" href="styles.css">
 </head>
 <body>
@@ -16,9 +16,10 @@
       <img src="https://upload.wikimedia.org/wikipedia/commons/0/0e/Windows_logo_2021.svg" alt="Windows Logo" class="logo" id="logo">
       <div id="startMenuDropdown" class="start-menu">
         <ul>
-          <li>Home</li>
-          <li>About</li>
-          <li>Contact</li>
+          <li id="home">Home</li>
+          <li id="about">About</li>
+          <li id="contact">Contact</li>
+          <li id="shutdown">Shut Down</li>
         </ul>
       </div>
     </div>
@@ -32,8 +33,8 @@
   </div>
 
   <div class="content">
-    <h1>Mr.exe</h1>
-    <p>The Batch Of King Doms</p>
+    <h1>Welcome to the Matrix</h1>
+    <p>Explore the DarkTron vibes with glowing green code.</p>
   </div>
 
   <script src="script.js"></script>
