--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   <!-- Taskbar seperti Windows 7 -->
   <div class="taskbar">
     <div class="start" id="startMenu">
-      <img src="https://logodix.com/logo/526951.png" alt="Windows Logo" class="logo" id="logo">
+      <img src="https://upload.wikimedia.org/wikipedia/commons/0/0e/Windows_logo_2021.svg" alt="Windows Logo" class="logo" id="logo">
       <div id="startMenuDropdown" class="start-menu">
         <ul>
           <li id="home">Home</li>
@@ -26,15 +26,24 @@
     <div class="taskbar-content">
       <div class="notifikasi" id="notifikasi">
         <span>📰</span>
-        <div id="notif-message" class="notif-message" style="display:none;">Ada postingan baru!</div>
+        <div id="notif-message" class="notif-message" style="display:none;">
+          <h3>Postingan</h3>
+          <ul id="post-list"></ul>
+        </div>
       </div>
-      <div class="jam" id="jam"></div>
+      <div class="jam" id="jam" style="cursor: pointer;"></div>
     </div>
   </div>
 
   <div class="content">
     <h1>Welcome to the Matrix</h1>
     <p>Explore the DarkTron vibes with glowing green code.</p>
+  </div>
+
+  <div id="clock-container" style="display: none;">
+    <!-- Tempat Jam Analog dan Kalender -->
+    <div id="clock"></div>
+    <div id="calendar"></div>
   </div>
 
   <script src="script.js"></script>
