--- a/index.html
+++ b/index.html
@@ -41,9 +41,11 @@
   </div>
 
   <div id="clock-container" style="display: none;">
-    <!-- Tempat Jam Analog dan Kalender -->
-    <div id="clock"></div>
-    <div id="calendar"></div>
+    <!-- Pop-up untuk Jam Analog dan Kalender -->
+    <div id="analogClock" class="clock-popup">
+      <canvas id="analogCanvas"></canvas>
+      <div id="calendar"></div>
+    </div>
   </div>
 
   <script src="script.js"></script>
