--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   <!-- Taskbar seperti Windows 7 -->
   <div class="taskbar">
     <div class="start" id="startMenu">
-      <img src="https://logodix.com/logo/526951.png" alt="Windows Logo" class="logo" id="logo">
+      <img src="https://upload.wikimedia.org/wikipedia/commons/0/0e/Windows_logo_2021.svg" alt="Windows Logo" class="logo" id="logo">
       <div id="startMenuDropdown" class="start-menu">
         <ul>
           <li id="home">Home</li>
@@ -31,7 +31,7 @@
           <ul id="post-list"></ul>
         </div>
       </div>
-      <div class="jam" id="jam" style="cursor: pointer;"></div>
+      <div class="jam" id="jam" style="cursor: pointer;">00:00:00</div>
     </div>
   </div>
 
