--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
   <!-- Canvas untuk efek rain matrix -->
-  <canvas id="matrix"></canvas>
+  <canvas id="rainMatrix"></canvas>
 
   <!-- Taskbar seperti Windows 7 -->
   <div class="taskbar">
