--- a/index.html
+++ b/index.html
@@ -31,10 +31,15 @@
           <ul id="post-list"></ul>
         </div>
       </div>
-      <div class="jam-tanggal">
-        <div id="jam">00:00:00</div>
-        <div id="tanggal">01/01/2024</div>
-      </div>
+        <!-- Jam dan Tanggal -->
+      <div class="taskbar-content">
+      <div class="jam" id="jam"></div>
+      <div class="tanggal" id="tanggal"></div>
+    </div>
+        <!-- Notifikasi (Postingan) -->
+    <div class="notifikasi" onclick="showNotification()">Notifikasi</div>
+    <div class="notif-message" id="notifMessage">Judul Postingan</div>
+    </div>
     </div>
   </div>
 
