--- a/index.html
+++ b/index.html
@@ -12,8 +12,15 @@
 
   <!-- Taskbar seperti Windows 7 -->
   <div class="taskbar">
-    <div class="start">
-      <img src="https://upload.wikimedia.org/wikipedia/commons/0/0e/Windows_logo_2021.svg" alt="Windows Logo" class="logo">
+    <div class="start" id="startMenu">
+      <img src="https://upload.wikimedia.org/wikipedia/commons/0/0e/Windows_logo_2021.svg" alt="Windows Logo" class="logo" id="logo">
+      <div id="startMenuDropdown" class="start-menu">
+        <ul>
+          <li>Home</li>
+          <li>About</li>
+          <li>Contact</li>
+        </ul>
+      </div>
     </div>
     <div class="taskbar-content">
       <div class="notifikasi" id="notifikasi">
