--- a/index.html
+++ b/index.html
@@ -13,12 +13,13 @@
   <!-- Taskbar seperti Windows 7 -->
   <div class="taskbar">
     <div class="start" id="startMenu">
-      <img src="https://logodix.com/logo/526951.png" alt="Windows Logo" class="logo" id="logo">
+      <img src="https://upload.wikimedia.org/wikipedia/commons/0/0e/Windows_logo_2021.svg" alt="Windows Logo" class="logo" id="logo">
       <div id="startMenuDropdown" class="start-menu">
         <ul>
-          <li>Home</li>
-          <li>About</li>
-          <li>Contact</li>
+          <li id="home">Home</li>
+          <li id="about">About</li>
+          <li id="contact">Contact</li>
+          <li id="shutdown">Shut Down</li>
         </ul>
       </div>
     </div>
