--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   <!-- Taskbar seperti Windows 7 -->
   <div class="taskbar">
     <div class="start" id="startMenu">
-      <img src="https://upload.wikimedia.org/wikipedia/commons/0/0e/Windows_logo_2021.svg" alt="Windows Logo" class="logo" id="logo">
+      <img src=https://logodix.com/logo/526951.png" alt="Windows Logo" class="logo" id="logo">
       <div id="startMenuDropdown" class="start-menu">
         <ul>
           <li id="home">Home</li>
