--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <div class="rain-matrix"></div>
+    <canvas id="matrix-canvas"></canvas>
     <div class="taskbar">
         <div class="start-menu">
             <div class="user-profile">
@@ -42,4 +42,3 @@
     <script src="script.js"></script>
 </body>
 </html>
-
